Update Documentation on controller functions
